got the buttons to work

--- a/index.html
+++ b/index.html
@@ -14,16 +14,23 @@
             <div class="status-light"></div>
         </div>
         <div class="utility-area page-element">
-            <div class="two-button-rocker"></div>
-            <div class="quick-actions">
-                <div class="qa-button"></div>
-                <div class="qa-button"></div>
-                <div class="qa-button"></div>
-                <div class="qa-button"></div>
-            </div>
-            <div class="two-button-rocker">
-                <button>+</button>
-                <button>-</button>
+            <div class="grid">
+                <!-- <div class="qa-button1 qa"><img src="res/netflix.png" alt=""></div> -->
+                <!-- <div class="two-button-rocker"></div> -->
+                    <div class="qa-button1 qa"><img src="res/netflix.png"></div>
+                    <div class="qa-button2 qa"><img src="res/Hulu.png"></div>
+                    <div class="qa-button3 qa"><img src="res/HBO.png"></div>
+                    <div class="qa-button4 qa"><img src="res/HBO.png"></div>
+                <!-- <div class="quick-actions">
+                   <div class="temp"></div>
+                   <div class="temp"></div>
+                   <div class="temp"></div>
+                   <div class="temp"></div>
+                </div> -->
+                <div class="two-button-rocker">
+                    <button>+</button>
+                    <button>-</button>
+                </div>
             </div>
         </div>
         
@@ -32,9 +39,9 @@
         </div>
         
         <div id="touchpad" class="touch-area page-element"></div>
-        <button id="log" onclick="enableLog(event);">Start/Stop event logging</button>
+        <!-- <button id="log" onclick="enableLog(event);">Start/Stop event logging</button>
         <button id="clearlog" onclick="clearLog(event);">Clear the log</button>
         <p></p>
-        <output></output>
+        <output></output> -->
     </body>
 </html>
