added another icon

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <div class="grid">
                 <!-- <div class="qa-button1 qa"><img src="res/netflix.png" alt=""></div> -->
                 <!-- <div class="two-button-rocker"></div> -->
-                    <div class="qa-button1 qa"><img src="res/netflix.png"></div>
-                    <div class="qa-button2 qa"><img src="res/Hulu.png"></div>
+                    <div class="qa-button1 qa"><img src="res/Netflix.png"></div>
+                    <div class="qa-button2 qa"><img class="right" src="res/Hulu.png"></div>
                     <div class="qa-button3 qa"><img src="res/HBO.png"></div>
-                    <div class="qa-button4 qa"><img src="res/HBO.png"></div>
+                    <div class="qa-button4 qa"><img class="right" src="res/Crunchy.png"></div>
                 <!-- <div class="quick-actions">
                    <div class="temp"></div>
                    <div class="temp"></div>
