Created http server that handles my requests. It loads the site and deals with post requests. Now starting to implement the new thread that will be controlling the computer

--- a/frontend/public/pages/index.html
+++ b/frontend/public/pages/index.html
@@ -5,6 +5,8 @@
         content="width=device-width,  initial-scale=1, maximum-scale=1, user-scalable=0,user-scalable=no, viewport-fit=cover">
         <meta name="HandheldFriendly" content="true" />
 
+        <script src="scripts/common.js"></script>
+
         <script src="scripts/touchpad.js"></script>
         <link rel="stylesheet" href="styles/controller.css">
     </head>
@@ -15,18 +17,11 @@
         </div>
         <div class="utility-area page-element">
             <div class="grid">
-                <!-- <div class="qa-button1 qa"><img src="res/netflix.png" alt=""></div> -->
-                <!-- <div class="two-button-rocker"></div> -->
                     <div class="qa-button1 qa"><img src="res/Netflix.png"></div>
                     <div class="qa-button2 qa"><img class="right" src="res/Hulu.png"></div>
                     <div class="qa-button3 qa"><img src="res/HBO.png"></div>
                     <div class="qa-button4 qa"><img class="right" src="res/Crunchy.png"></div>
-                <!-- <div class="quick-actions">
-                   <div class="temp"></div>
-                   <div class="temp"></div>
-                   <div class="temp"></div>
-                   <div class="temp"></div>
-                </div> -->
+
                 <div class="two-button-rocker">
                     <button>+</button>
                     <button>-</button>
